--- a/app/src/main/res/layout/activity_arcade.xml
+++ b/app/src/main/res/layout/activity_arcade.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/pnlOyun"
-    tools:context="com.narcoding.dotpuzzle.Oyun">
+    android:id="@+id/pnlArcade"
+    tools:context="com.narcoding.dotpuzzle.Arcade">
 
     <FrameLayout
 
@@ -40,7 +40,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tıklama sayısı: 0"
             android:id="@+id/textView"/>
 
 
