--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -3,13 +3,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center"
+    android:id="@+id/pnlSplash"
     android:layout_centerHorizontal="true">
 
-    <ImageView
-        android:layout_gravity="center"
-        android:background="@drawable/zemin"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
     <AbsoluteLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
