dil ingilizceye çevrildi arcade moda sharedpref eklenecek ve random kontrolü yapılacak tüm bölümler bitince patlaması engellendi

--- a/app/src/main/res/layout/activity_arcade.xml
+++ b/app/src/main/res/layout/activity_arcade.xml
@@ -6,6 +6,29 @@
     android:id="@+id/pnlArcade"
     tools:context="com.narcoding.dotpuzzle.Arcade">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/frameLayout"
+        >
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:id="@+id/imgSureA"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:id="@+id/txtSureA"
+            android:textSize="20dp"
+            android:textColor="@color/beyaz"/>
+    </RelativeLayout>
+
     <FrameLayout
 
         android:layout_width="wrap_content"
@@ -25,7 +48,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:stretchMode="columnWidth"
-            android:id="@+id/gridView"
+            android:id="@+id/gridViewA"
             android:gravity="center">
         </GridView>
 
@@ -37,18 +60,12 @@
         android:layout_below="@+id/frameLayout"
         android:layout_centerHorizontal="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"/>
-
-
-        <Button
+        <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/geri_butonu"
+            android:background="@drawable/geri"
             android:layout_gravity="center"
-            android:id="@+id/button"/>
+            android:id="@+id/btnGeriA"/>
 
     </LinearLayout>
 
