memory olayı tamam, her aktivityden çıktığında finish() çalışacak restart tuşu eklendi

--- a/app/src/main/res/layout/activity_arcade.xml
+++ b/app/src/main/res/layout/activity_arcade.xml
@@ -38,8 +38,8 @@
         android:id="@+id/frameLayout">
 
         <GridView
-            android:layout_width="203dp"
-            android:layout_height="wrap_content"
+            android:layout_width="204dp"
+            android:layout_height="204dp"
             android:layout_gravity="center"
             android:columnWidth="10dp"
             android:horizontalSpacing="1dp"
@@ -56,16 +56,23 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_below="@+id/frameLayout"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false">
 
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/geri"
             android:layout_gravity="center"
             android:id="@+id/btnGeriA"/>
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:id="@+id/btnRestartA"/>
 
     </LinearLayout>
 
