--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/zemin"
+    android:id="@+id/pnlmain"
     android:gravity="center"
     android:layout_gravity="center"
     tools:context="com.narcoding.dotpuzzle.MainActivity">
