--- a/app/src/main/res/layout/activity_oyun.xml
+++ b/app/src/main/res/layout/activity_oyun.xml
@@ -38,8 +38,8 @@
         android:id="@+id/frameLayout">
 
         <GridView
-            android:layout_width="203dp"
-            android:layout_height="wrap_content"
+            android:layout_width="204dp"
+            android:layout_height="204dp"
             android:layout_gravity="center"
             android:columnWidth="10dp"
             android:horizontalSpacing="1dp"
@@ -56,16 +56,24 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_below="@+id/frameLayout"
         android:layout_centerHorizontal="true">
 
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/geri"
             android:layout_gravity="center"
-            android:id="@+id/btnGeriO"/>
+            android:id="@+id/btnGeriO"
+            android:horizontalSpacing="1dp"
+            android:verticalSpacing="1dp" />
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:id="@+id/btnRestartO"
+            android:horizontalSpacing="1dp"
+            android:verticalSpacing="1dp"/>
 
     </LinearLayout>
 
