--- a/app/src/main/res/layout/activity_oyun.xml
+++ b/app/src/main/res/layout/activity_oyun.xml
@@ -31,8 +31,8 @@
 
     <FrameLayout
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="204dp"
+        android:layout_height="204dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:id="@+id/frameLayout">
